--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./init": {
+      "types": "./dist/init.d.ts",
+      "default": "./dist/init.js"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
